Fixed the interior sidebar spacing issue

--- a/UniversityCollege_cssCleanup/scss/_interior.scss
+++ b/UniversityCollege_cssCleanup/scss/_interior.scss
@@ -120,7 +120,7 @@
 			padding: 0;
 			li{
 				margin: 0;
-				padding: 3px 0;
+				padding: 0;
 				list-style-type: none;
 			}
 		}
